2011-10-06  Filip Pizlo  <fpizlo@apple.com>

        DFG::shouldSpeculate methods are too complicated
        https://bugs.webkit.org/show_bug.cgi?id=69560

        Reviewed by Geoffrey Garen.
        
        Moved shouldSpeculate methods to DFG::Node, and cleaned them up to
        just use node predictions.
        
        By itself this would have meant that SpeculativeJIT code would have
        had to say things like m_jit.graph()[nodeIndex].shouldSpeculateXYZ().
        So this adds an at(NodeIndex) method to JITCodeGenerator. I replaced
        all uses of the m_jit.graph()[nodeIndex] idiom with at(nodeIndex).
        
        This is an 0.4% progression overall that shows up in all benchmarks,
        for reasons unknown.

        * dfg/DFGJITCodeGenerator.h:
        (JSC::DFG::JITCodeGenerator::at):
        (JSC::DFG::JITCodeGenerator::canReuse):
        (JSC::DFG::JITCodeGenerator::isFilled):
        (JSC::DFG::JITCodeGenerator::isFilledDouble):
        (JSC::DFG::JITCodeGenerator::use):
        (JSC::DFG::JITCodeGenerator::silentSpillFPR):
        (JSC::DFG::JITCodeGenerator::silentFillGPR):
        (JSC::DFG::JITCodeGenerator::silentFillFPR):
        (JSC::DFG::detectPeepHoleBranch):
        (JSC::DFG::integerResult):
        (JSC::DFG::noResult):
        (JSC::DFG::cellResult):
        (JSC::DFG::jsValueResult):
        (JSC::DFG::storageResult):
        (JSC::DFG::doubleResult):
        (JSC::DFG::initConstantInfo):
        (JSC::DFG::appendCallWithExceptionCheck):
        * dfg/DFGJITCodeGenerator32_64.cpp:
        (JSC::DFG::JITCodeGenerator::fillInteger):
        (JSC::DFG::JITCodeGenerator::fillDouble):
        (JSC::DFG::JITCodeGenerator::fillJSValue):
        (JSC::DFG::JITCodeGenerator::nonSpeculativeValueToNumber):
        (JSC::DFG::JITCodeGenerator::nonSpeculativeValueToInt32):
        (JSC::DFG::JITCodeGenerator::nonSpeculativeUInt32ToNumber):
        (JSC::DFG::JITCodeGenerator::nonSpeculativeKnownConstantArithOp):